fdo#75950: Just set the right grammar and be done with it.

Using the Excel A1 syntax with custom opcode was probably a hack back
in the day.  These days we can just set the right grammar and expect the
compiler to do the right thing.

Change-Id: Iae98f9f09a7da0b7b9549e06308d5d313bbff1ea
(cherry picked from commit ca8ca8c28742879220f3ff88ae0d71c8d69b11cd)
Reviewed-on: https://gerrit.libreoffice.org/8521
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>