sc/source/filter/excel/xestream.cxx
@@ -842,23 +842,10 @@ OUString XclXmlUtils::ToOUString( const ScfUInt16Vec& rBuf, sal_Int32 nStart, sa
 }
 
 OUString XclXmlUtils::ToOUString(
-    ScDocument& rDocument, const ScAddress& rAddress, const ScTokenArray* pTokenArray,
-    const FormulaCompiler::OpCodeMapPtr & xOpCodeMap )
+    ScDocument& rDocument, const ScAddress& rAddress, const ScTokenArray* pTokenArray )
 {
     ScCompiler aCompiler( &rDocument, rAddress, const_cast<ScTokenArray&>(*pTokenArray));
-    if (xOpCodeMap)
-    {
-        aCompiler.SetFormulaLanguage( xOpCodeMap );
-        /* TODO: The correct ref convention would be CONV_XL_OOX but that would
-         * need aCompiler.SetExternalLinks() and so far we don't have the links
-         * mapping. */
-        aCompiler.SetRefConvention( formula::FormulaGrammar::CONV_XL_A1 );
-    }
-    else
-    {
-        SAL_WARN( "sc", "XclXmlUtils::ToOUString - no opcodemap, dumb fallback to PODF");
-        aCompiler.SetGrammar(FormulaGrammar::GRAM_ENGLISH_XL_A1);
-    }
+    aCompiler.SetGrammar(FormulaGrammar::GRAM_ENGLISH_XL_OOX);
 
     OUStringBuffer aBuffer( pTokenArray->GetLen() * 5 );
     aCompiler.CreateStringFromTokenArray( aBuffer );
